--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
       },
     "scripts": {
         "heroku-postbuild": "cd guessing-game-client && npm install && npm install --only-dev --no-shrinkwrap && npm run build",
-        "start": "cd guessing-game-server && npm start"
+        "start": "cd guessing-game-server && npm install && npm start"
     }
 }
